--- a/book.toml
+++ b/book.toml
@@ -10,8 +10,8 @@ description = "Linutil is a distro-agnostic toolbox designed to simplify everyda
 smart-punctuation = true
 mathjax-support = true
 site-url = "/rustmdbook/"
-git-repository-url = "https://github.com/harilvfs/rustmdBook/tree/main/linutil-docs/"
-edit-url-template = "https://github.com/harilvfs/rustmdBook/edit/main/linutil-docs{path}"
+git-repository-url = "https://github.com/harilvfs/rustmdBook/tree/main/src/"
+edit-url-template = "https://github.com/harilvfs/rustmdBook/edit/main/src{path}"
 
 [output.html.playground]
 editable = true
@@ -19,6 +19,15 @@ line-numbers = true
 
 [output.html.code.hidelines]
 python = "~"
+
+[output.html.search]
+limit-results = 20
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 2
+boost-paragraph = 1
+expand = true
+heading-split-level = 2
 
 [output.html.redirect]
 "/format/config.html" = "configuration/index.html"
