Refactor Overall Structure
Co-Authored-By: aayush <177418358+aayushrg7@users.noreply.github.com>
Co-Authored-By: Smriti Bhandari <187972284+smritics@users.noreply.github.com>

--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,8 @@ title = "Linutil Docs"
 description = "Linutil is a distro-agnostic toolbox designed to simplify everyday Linux tasks."
 
 [output.html]
+default-theme = "ayu"
+preferred-dark-theme = "ayu"
 smart-punctuation = true
 mathjax-support = true
 site-url = "/rustmdbook/"
